--- a/src/components/Postjob/postjob.scss
+++ b/src/components/Postjob/postjob.scss
@@ -53,6 +53,8 @@ input{
 .firstChild{
     width: 220px;
     text-align: start;
+    font-size: 20px;
+    color: #3E3E3E;
 }
 .jobcard{
     width: 300px;
@@ -62,14 +64,12 @@ input{
 }
 
 .jobhead{
-    display: grid;
+    display: flex;
     align-items: center;
     gap: 10px;
     justify-content: space-around;
     border-bottom: 1px solid #D6D6D6;
     padding-bottom: 7px;
-    height: 40px;
-    grid-template-columns: 10% 80% 20%;
 }
 .count{
     width: 100px;
@@ -80,6 +80,7 @@ input{
     background-color: #D9E4EF;
     border-radius: 3px;
     margin-left: 10px;
+    color: #fff;
 }
 .jobmiddle{
     height: 200px;
@@ -93,6 +94,8 @@ input{
     display: flex;
     justify-content: space-between;
     border-top: 1px solid  #D6D6D6;
+    font-size: 12px;
+    align-items: center;
 }
 .overAllCard{
    
